# card_format

./: Cargo.toml  readme.md
src/: card.rs  card_check.rs  err.rs  lib.rs  license.md  old_parse.rs  parse.rs  tokenize.rs
test_data/: cards1.card  cards2_list.crd  cards3_maps.crd
