[package]
name = "card_format"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
name="card_format"
path="src/lib.rs"

[[bin]]
name="card_check"
path="src/card_check.rs"



[dependencies]
gobble = {path="../../mlibs/gobble/"}
anyhow="1.0.31"
thiserror="1.0.17"
serde = "1.0.106"
serde_derive = "1.0.106"
