[package]
name = "card_format"
version = "0.2.1"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
license = "MIT"
keywords = ["card","read","format","load"]
description = "A tool for writing game cards in a human readable easy to edit format"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
name="card_format"
path="src/lib.rs"

[[bin]]
name="card_check"
path="src/card_check.rs"



[dependencies]
#gobble = {path="../../mlibs/gobble/"}
#gobble = "0.6.3"
#tokenate = {path="../../mlibs/tokenate/"}
tokenate = "0.1.0"
#anyhow="1.0.31"
thiserror="1.0.17"
serde = "1.0.106"
serde_derive = "1.0.106"
