[package]
name = "card_format"
version = "0.2.2"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
license = "MIT"
keywords = ["card","read","format","load"]
description = "A tool for writing game cards in a human readable easy to edit format"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
name="card_format"
path="src/lib.rs"

[[bin]]
name="card_check"
path="src/card_check.rs"
required-features=["util"]



[dependencies]
#gobble = {path="../../mlibs/gobble/"}
#gobble = "0.6.3"
#tokenate = {path="../../mlibs/tokenate/"}
tokenate = "0.1.0"
#anyhow="1.0.31"
thiserror="1.0.17"
serde = {version = "1.0.106"}
serde_derive = {version = "1.0.106"}
clap = {version = "4.2.5",features=["cargo"],optional = true}
serde_json = {version="1.0.96",optional=true}
[features]
util = ["clap","serde_json"]
